(fix): names (fix): added return types (fix): code cleanup (fix): move new sidebar markers styles to its own component

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -4,7 +4,12 @@
   </div>
 </ng-template>
 
-<div class="m-v3Topbar__top">
+<div
+  class="m-v3Topbar__top"
+  [class.m-v3Topbar__marketingPages]="marketingPages"
+  [class.m-v3Topbar__noBackground]="!showBackground"
+  [style.visibility]="showTopbar ? 'visible' : 'hidden'"
+>
   <div class="m-grid">
     <div class="m-v3Topbar__leftColumn">
       <nav class="m-v3Topbar__nav">
