--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -1,3 +1,7 @@
+<h5 i18n *ngIf="leftSidebar && layoutMode !== 'tablet'">
+  Groups
+</h5>
+
 <ul class="m-groupSidebarMarkers__list m-scroll__thin" #list>
   <li style="display:flex">
     <a
