--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@@ -1,5 +1,94 @@
 @import 'defaults';
 
+m-group--sidebar-markers {
+  &.m-groupSidebarMarkers__leftSidebar {
+    h5 {
+      font-size: 11px;
+      line-height: 30px;
+      letter-spacing: 1.83px;
+      text-transform: uppercase;
+      @include m-theme() {
+        color: rgba(themed($m-black), 0.3);
+      }
+    }
+
+    .m-groupSidebarMarkers__list {
+      margin: 0;
+      padding: 0;
+      width: auto !important;
+      height: auto !important;
+      max-width: unset;
+      min-height: unset;
+      box-shadow: unset !important;
+      display: block !important;
+      overflow: unset !important;
+
+      & > li {
+        width: auto;
+        height: auto;
+        border: unset !important;
+
+        a {
+          padding: 8px 0;
+          font-size: 14px;
+          font-weight: normal;
+          line-height: 30px;
+
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow-x: hidden;
+
+          @include m-theme() {
+            color: themed($m-black);
+          }
+
+          &.m-groupSidebarMarkers__newGroup,
+          &.m-groupSidebarMarkers__discoverGroups {
+            @include m-theme() {
+              color: themed($m-grey-200);
+            }
+
+            i.material-icons {
+              @include m-theme() {
+                color: themed($m-grey-500);
+              }
+            }
+          }
+
+          m-tooltip {
+            vertical-align: middle;
+            margin-right: 21px;
+
+            img {
+              width: 27px;
+              height: 27px;
+            }
+
+            i.material-icons {
+              font-size: 20px;
+              width: 27px;
+              height: 27px;
+            }
+          }
+        }
+      }
+
+      infinite-scroll {
+        padding: 2px 0 !important;
+        width: 48px !important;
+
+        .m-infinite-scroll-manual {
+          font-size: 10px;
+          padding: 2px;
+          background-color: transparent !important;
+          transform: rotate(0) !important;
+          text-align: left;
+        }
+      }
+    }
+  }
+}
+
 .m-groupSidebarMarkers__list {
   display: block;
   margin: auto;
