--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,11 +40,7 @@
   </ng-container>
 
   <m-body
-    [class.has-markers-sidebar]="
-      session.isLoggedIn() &&
-      !isProDomain &&
-      !featuresService.has('navigation-2020')
-    "
+    [class.has-markers-sidebar]="hasMarkersSidebar()"
     [class.has-v2-navbar]="featuresService.has('top-feeds')"
     [class.has-v3-navbar]="featuresService.has('navigation-2020')"
     [class.is-pro-domain]="isProDomain"
