--- a/src/app/common/components/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/common/components/sidebar-menu/sidebar-menu.component.scss
@@ -67,7 +67,7 @@ m-sidebarMenu {
       a.selected,
       &:hover a {
         @include m-theme() {
-          color: themed($m-blue);
+          color: themed($m-link);
         }
       }
       &:last-child {
