--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -73,7 +73,7 @@ $amber: #ffc108;
 $amber-medium: #fed12f;
 $amber-light: #ffecb3;
 $red-dark: #c62828;
-$red: #f44336;
+$red: #e03c20;
 $red-light: #e57373;
 
 $black: #000;
