--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -1,13 +1,3 @@
-@mixin m-walletColor--medium {
-  @include m-theme() {
-    color: themed($m-grey-300);
-  }
-}
-@mixin m-walletColor--dark {
-  @include m-theme() {
-    color: themed($m-grey-800);
-  }
-}
 @mixin m-walletText--15 {
   font-size: 15px;
   line-height: 20px;
@@ -41,14 +31,14 @@ m-walletDashboard {
       margin-top: 6px;
       font-size: 18px;
       @include m-theme() {
-        color: themed($m-grey-800);
+        color: themed($m-textColor--primary);
       }
     }
     .m-shadowboxHeaderTab__value {
       font-weight: 300;
       font-size: 16px;
       @include m-theme() {
-        color: themed($m-grey-300);
+        color: themed($m-textColor--tertiary);
       }
     }
   }
@@ -57,7 +47,7 @@ m-walletDashboard {
     display: flex;
     flex-flow: row nowrap;
     @include m-theme() {
-      border-bottom: 1px solid themed($m-grey-100);
+      border-bottom: 1px solid themed($m-borderColor--secondary);
     }
   }
   .m-walletDashboardViews__tab {
@@ -71,18 +61,18 @@ m-walletDashboard {
     transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
       border-bottom: 3px solid themed($m-white);
     }
     &.active {
       @include m-theme() {
-        color: themed($m-grey-800);
+        color: themed($m-textColor--primary);
         border-bottom: 3px solid themed($m-blue);
       }
     }
     &:hover {
       @include m-theme() {
-        color: themed($m-grey-800);
+        color: themed($m-textColor--primary);
       }
     }
   }
@@ -197,7 +187,7 @@ m-walletDashboard {
       flex-flow: row nowrap;
       position: relative;
       @include m-theme() {
-        color: themed($m-grey-300);
+        color: themed($m-textColor--tertiary);
       }
     }
     &[class*='--validation'] {
@@ -209,7 +199,7 @@ m-walletDashboard {
         margin: 0;
         font-weight: 300;
         @include m-theme() {
-          color: themed($m-red-dark);
+          color: themed($m-alert); //red-dark
         }
       }
     }
@@ -224,7 +214,7 @@ m-walletDashboard {
         input,
         .m-phoneInput__wrapper {
           @include m-theme() {
-            border-color: themed($m-red-dark) !important;
+            border-color: themed($m-alert) !important; //red-dark
           }
         }
       }
@@ -259,7 +249,7 @@ m-walletDashboard {
     border-radius: 2px;
     @include m-theme() {
       box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
-      border: 1px solid themed($m-grey-50);
+      border: 1px solid themed($m-borderColor--primary);
     }
     &:focus {
       &:not(:read-only) {
@@ -314,7 +304,7 @@ m-walletDashboard {
 .m-walletSettings {
   // font-weight: 300;
   @include m-theme() {
-    color: themed($m-grey-800);
+    color: themed($m-textColor--primary);
   }
   m-shadowboxSubmitButton {
     margin: 27px 0 0 0;
@@ -348,7 +338,7 @@ m-walletDashboard {
     margin: 23px 0 0 0;
     // font-weight: 300;
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
     }
   }
 
@@ -364,9 +354,9 @@ m-walletDashboard {
     cursor: text;
 
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
       box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
-      border: 1px solid themed($m-grey-50);
+      border: 1px solid themed($m-borderColor--primary);
     }
 
     &:focus {
@@ -395,7 +385,7 @@ m-walletDashboard {
     div:first-child {
       margin-right: 18px;
       @include m-theme() {
-        color: themed($m-grey-800);
+        color: themed($m-textColor--primary);
       }
     }
     a {
@@ -413,7 +403,7 @@ m-walletDashboard {
     line-height: 16px;
     margin: 31px 0 0 0;
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
     }
     i {
       font-size: 18px;
@@ -430,7 +420,7 @@ m-walletDashboard {
     }
     p {
       @include m-theme() {
-        color: themed($m-grey-800);
+        color: themed($m-textColor--primary);
       }
     }
     .m-walletSettingsView__setupOption--custom {
@@ -445,7 +435,7 @@ m-walletDashboard {
         }
         span {
           @include m-theme() {
-            color: themed($m-grey-300);
+            color: themed($m-textColor--tertiary);
           }
         }
       }
@@ -477,7 +467,7 @@ m-walletDashboard {
   }
   span.m-walletSettings__address--emphasis {
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
     }
   }
 
@@ -489,7 +479,7 @@ m-walletDashboard {
     text-decoration: none;
 
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
     }
     &:hover {
       span {
