(fix): rename 'navigation-2020' to 'navigation'

--- a/src/app/modules/channels/channel.component.html
+++ b/src/app/modules/channels/channel.component.html
@@ -32,7 +32,7 @@
   </span>
 </div>
 
-<ng-container *mIfFeature="'navigation-2020'; else v1Channel">
+<ng-container *mIfFeature="'navigation'; else v1Channel">
   <div class="m-channel__middleColumn">
     feed goes here
   </div>
