--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
   <m-body
     [class.has-markers-sidebar]="hasMarkersSidebar()"
     [class.has-v2-navbar]="featuresService.has('top-feeds')"
-    [class.has-v3-navbar]="featuresService.has('navigation-2020')"
+    [class.has-v3-navbar]="featuresService.has('navigation')"
     [class.is-pro-domain]="isProDomain"
   >
     <m-emailConfirmation *ngIf="!isProDomain"></m-emailConfirmation>
