pushing unfinished stuff bc my comp smells like burning plastic and might burst into flames

--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -160,6 +160,11 @@ m-walletDashboard {
   .m-walletForm__multifieldGroup {
     margin-top: 58px;
   }
+  .m-walletForm__buttonsContainer {
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: center;
+  }
   .m-walletForm__nameFieldsContainer {
     display: flex;
     box-sizing: border-box;
