--- a/src/app/modules/wallet/v2/settings-cash/bank-form/bank-form.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/bank-form/bank-form.component.html
@@ -1,1 +1,184 @@
-<p>bank-form works!</p>
+<div class="mdl-spinner mdl-js-spinner is-active" [mdl] *ngIf="!loaded"></div>
+<div class="m-walletBankForm" *ngIf="loaded">
+  <!-- HAS NOT SET UP BANK ACCOUNT / IS UPDATING BANK ACCOUNT ------------------ -->
+  <ng-container *ngIf="!leftMonetization">
+    <form
+      [formGroup]="bankForm"
+      *ngIf="!account.bankAccount || !account.bankAccount.last4 || editing"
+    >
+      <p>Enter bank account details to receive payments.</p>
+      <!-- ***INPUT BANKCOUNTRY DROPDOWN-->
+      <div class="m-walletForm__field--text stretchedField" *ngIf="editingBank">
+        <div class="m-walletSettings__row--label">
+          <label for="bankCountry" i18n>Country</label>
+        </div>
+        <div class="m-walletForm__row--input">
+          <minds-country-input
+            type="text"
+            id="bankCountry"
+            name="bankCountry"
+            formControlName="bankCountry"
+            class="form-control"
+            data-minds="bankCountry"
+            [allowed]="allowedCountries"
+            [country]="bankCountry.value"
+            (countryChange)="bankCountry.setValue($event)"
+          ></minds-country-input>
+          <!-- <m-countryInput
+        type="text"
+        id="bankCountry"
+        name="bankCountry"
+        formControlName="bankCountry"
+        class="form-control"
+        data-minds="bankCountry"
+        [allowedCountries]="allowedCountries"
+        [initCountryCode]="bankCountry.value"
+        (countryChange)="bankCountry.setValue($event)"
+      ></m-countryInput > -->
+        </div>
+      </div>
+      <!-- ***INPUT ACCOUNT NUMBER -->
+      <div class="m-walletForm__field--text stretchedField">
+        <div class="m-walletForm__row--label">
+          <label for="accountNumber" i18n>Bank Account Number / IBAN</label
+          ><m-tooltip icon="help">placeholder</m-tooltip>
+        </div>
+        <div class="m-walletForm__row--input">
+          <input
+            type="text"
+            id="accountNumber"
+            name="accountNumber"
+            formControlName="accountNumber"
+            class="form-control"
+            data-minds="accountNumber"
+          />
+        </div>
+      </div>
+      <!-- ***INPUT ROUTING NUMBER -->
+      <div class="m-walletForm__field--text stretchedField">
+        <div class="m-walletForm__row--label">
+          <label for="routingNumber" i18n>Routing Number / Sort Code</label>
+          <m-tooltip icon="help">placeholder</m-tooltip>
+        </div>
+        <div class="m-walletForm__row--input">
+          <input
+            type="text"
+            id="routingNumber"
+            name="routingNumber"
+            formControlName="routingNumber"
+            class="form-control"
+            data-minds="routingNumber"
+          />
+        </div>
+      </div>
+      <!-- FORM BUTTONS -------------- -->
+      <div class="m-walletForm__buttonsContainer">
+        <!-- TODOOJM consider a confirmation popup on cancel -->
+        <m-shadowboxSubmitButton
+          (click)="showModal = true; modalContent = 'leaveEditMode'"
+          [disabled]="inProgress"
+          color="grey"
+          >Cancel</m-shadowboxSubmitButton
+        >
+        <m-shadowboxSubmitButton
+          (click)="createAccount()"
+          [disabled]="inProgress"
+          >Update Personal Information</m-shadowboxSubmitButton
+        >
+      </div>
+    </form>
+    <!-- BANK ACCOUNT IS ALREADY SET UP ------------------ -->
+    <div
+      class="m-walletSettingsView--accountSplash"
+      *ngIf="account.bankAccount.last4"
+    >
+      <p>Your bank account details where cash rewards are deposited.</p>
+
+      <div class="m-walletSettingsView--accountSplash__bankPreviewWrapper">
+        <span>
+          {{ account.bankAccount.bank_name }}
+        </span>
+        <span>****{{ account.bankAccount.last4 }}</span>
+      </div>
+      <div class="m-walletSettingsView--accountSplash__linkContainer">
+        <a (click)="enterEditMode()">Update</a>
+        <a (click)="showModal = true; modalContent = 'removeBank'">Remove</a>
+      </div>
+    </div>
+
+    <div>
+      <h4>Leave Monetization Program</h4>
+      <p>
+        For security reasons, you won't be able to rejoin the monetization
+        program.
+      </p>
+      <m-shadowboxSubmitButton
+        color="red"
+        (click)="showModal = true; modalContent = 'leaveMonetization'"
+        >Leave Monetization Program</m-shadowboxSubmitButton
+      >
+    </div>
+    <!-- CONFIRMATION MODAL: LEAVE EDIT MODE -------------------- -->
+    <m-walletModal
+      [showModal]="showModal && modalContent === 'leaveEditMode'"
+      (closeModal)="showModal = false"
+    >
+      <p>
+        Are you sure you want to stop? Any bank information you've entered will
+        be lost.
+      </p>
+
+      <div class="m-walletSettings--cash__leaveModalButtons">
+        <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
+          >Cancel</m-shadowboxSubmitButton
+        >
+        <m-shadowboxSubmitButton color="red" (click)="leaveEditMode()"
+          >I'm sure</m-shadowboxSubmitButton
+        >
+      </div>
+    </m-walletModal>
+    <!-- CONFIRMATION MODAL: LEAVE MONETIZATION -------------------- -->
+    <m-walletModal
+      [showModal]="showModal && modalContent === 'leaveMonetization'"
+      (closeModal)="showModal = false"
+    >
+      <p *ngIf="modalContent === 'leaveMonetization'">
+        Are you sure you want to leave the monetization program? You won't be
+        able to rejoin again.
+      </p>
+      <p *ngIf="modalContent === 'removeBank'">
+        Are you sure you want to remove your bank account information? You won't
+        be able to receive payments until you add another one.
+      </p>
+      <div class="m-walletSettings--cash__leaveModalButtons">
+        <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
+          >Cancel</m-shadowboxSubmitButton
+        >
+        <m-shadowboxSubmitButton color="red" (click)="leaveMonetization()"
+          >I'm sure</m-shadowboxSubmitButton
+        >
+      </div>
+    </m-walletModal>
+    <!-- CONFIRMATION MODAL: REMOVE BANK -------------------- -->
+    <m-walletModal
+      [showModal]="showModal && modalContent === 'removeBank'"
+      (closeModal)="showModal = false"
+    >
+      <p>
+        Are you sure you want to remove your bank account information? You won't
+        be able to receive payments until you add another one.
+      </p>
+      <div class="m-walletSettings--cash__leaveModalButtons">
+        <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
+          >Cancel</m-shadowboxSubmitButton
+        >
+        <m-shadowboxSubmitButton color="red" (click)="removeBank()"
+          >I'm sure</m-shadowboxSubmitButton
+        >
+      </div>
+    </m-walletModal>
+  </ng-container>
+  <ng-container *ngIf="leftMonetization">
+    <p>You have left the monetization program.</p>
+  </ng-container>
+</div>
