--- a/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
@@ -1,1 +1,294 @@
-<p>cash-onboarding works!</p>
+<div class="mdl-spinner mdl-js-spinner is-active" [mdl] *ngIf="!loaded"></div>
+<div class="m-walletCashOnboarding" *ngIf="loaded">
+  <div class="m-walletCashOnboardingView--addDetails" *ngIf="!editing">
+    <m-shadowboxSubmitButton
+      (click)="toggleEditMode(true)"
+      [disabled]="inProgress"
+      >Set up cash payments</m-shadowboxSubmitButton
+    >
+  </div>
+  <div class="m-walletCashOnboardingView--form" *ngIf="editing">
+    <form [formGroup]="accountForm" *ngIf="!isMonetized() && editingAccount">
+      <p>Enter personal details to setup your cash payment account.</p>
+      <!-- ------------------------------------------------------------ -->
+
+      <!-- **** INPUT: COUNTRY DROPDOWN -->
+      <div class="m-walletForm__multifieldGroup">
+        <div class="m-walletForm__field--text stretchedField">
+          <div class="m-walletSettings__row--label">
+            <label for="country" i18n>Country</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <minds-country-input
+              type="text"
+              id="country"
+              name="country"
+              formControlName="country"
+              class="form-control"
+              data-minds="country"
+              [allowed]="allowedCountries"
+              [country]="country.value"
+              (countryChange)="country.setValue($event)"
+            ></minds-country-input>
+            <!-- <m-countryInput
+            type="text"
+            id="country"
+            name="country"
+            formControlName="country"
+            class="form-control"
+            data-minds="country"
+            [allowedCountries]="allowedCountries"
+            [initCountryCode]="country.value"
+            (countryChange)="country.setValue($event)"
+          ></minds-country-input> -->
+          </div>
+        </div>
+        <!-- (NAMES) -->
+        <div class="m-walletForm__nameFieldsContainer">
+          <!-- **** INPUT: FIRST NAME -->
+          <div class="m-walletForm__field--text stretchedField">
+            <div class="m-walletForm__row--label">
+              <label for="firstName" i18n>First Name</label>
+            </div>
+            <div class="m-walletForm__row--input">
+              <input
+                type="text"
+                id="firstName"
+                name="firstName"
+                formControlName="firstName"
+                class="form-control"
+                data-minds="firstName"
+              />
+            </div>
+          </div>
+          <!-- **** INPUT: LAST NAME -->
+          <div class="m-walletForm__field--text stretchedField">
+            <div class="m-walletForm__row--label">
+              <label for="lastName" i18n>Last Name</label>
+            </div>
+            <div class="m-walletForm__row--input">
+              <input
+                type="text"
+                id="lastName"
+                name="lastName"
+                formControlName="lastName"
+                class="form-control"
+                data-minds="lastName"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- **** INPUT: DATE OF BIRTH -->
+        <div class="m-walletForm__field--text">
+          <div class="m-walletForm__row--label">
+            <label for="dob" i18n>Date of Birth</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <minds-date-input
+              id="dob"
+              name="dob"
+              class="form-control"
+              formControlName="dob"
+              data-minds="dob"
+              [date]="dob.value"
+              (dateChange)="dob.setValue($event)"
+            ></minds-date-input>
+          </div>
+        </div>
+
+        <!-- **** INPUT: PHONE NUMBER -->
+        <div class="m-walletForm__field--text">
+          <div class="m-walletForm__row--label">
+            <label for="phoneNumber" i18n>Phone Number</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <m-phoneInput
+              id="phoneNumber"
+              name="phoneNumber"
+              formControlName="phoneNumber"
+              class="form-control"
+              data-minds="phoneNumber"
+              initCountryCode="US"
+              [allowedCountries]="allowedCountries"
+            >
+            </m-phoneInput>
+          </div>
+        </div>
+
+        <!-- **** INPUT: PERSONAL ID# -->
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="isCountry(['HK', 'SG'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="personalId" i18n *ngIf="isCountry(['HK'])"
+              >Hong Kong Identity Card (HKID)</label
+            >
+            <label for="personalId" i18n *ngIf="isCountry(['SG'])"
+              >National Registration Identity Card (NRIC)</label
+            >
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="personalId"
+              name="personalId"
+              formControlName="personalId"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <!-- **** INPUT: SSN -->
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="isCountry(['US'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="ssn" i18n>SSN (last 4 digits)</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="ssn"
+              name="ssn"
+              formControlName="ssn"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+      <!-- ------------------------------------------------------------ -->
+      <!-- **** INPUT: ADDRESS -- STREET -->
+      <div class="m-walletForm__multifieldGroup">
+        <div class="m-walletForm__field--text stretchedField">
+          <div class="m-walletForm__row--label">
+            <label for="street" i18n>Address</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="street"
+              name="street"
+              formControlName="street"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <!-- **** INPUT: ADDRESS -- CITY -->
+
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="!isCountry(['SG'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="city" i18n>City</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="city"
+              name="city"
+              formControlName="city"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <!-- **** INPUT: ADDRESS -- STATE -->
+
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="isCountry(['US'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="state" i18n>State</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="city"
+              name="city"
+              formControlName="city"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="isCountry(['AU', 'CA', 'IE'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="state" i18n>State / Province</label>
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="state"
+              name="state"
+              formControlName="state"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <!-- **** INPUT: ADDRESS -- ZIP -->
+
+        <div
+          class="m-walletForm__field--text stretchedField"
+          *ngIf="!isCountry(['HK'])"
+        >
+          <div class="m-walletForm__row--label">
+            <label for="postCode" i18n *ngIf="isCountry(['US'])"
+              >Zip Code</label
+            >
+            <label for="postCode" i18n *ngIf="!isCountry(['US'])"
+              >Postal Code</label
+            >
+          </div>
+          <div class="m-walletForm__row--input">
+            <input
+              type="text"
+              id="postCode"
+              name="postCode"
+              formControlName="postCode"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+      <!-- ------------------------------------------------------------ -->
+
+      <!-- **** INPUT: TOS CHECKBOX -->
+      <div class="m-walletSettings__field--checkbox">
+        <div class="m-walletSettings__row--input">
+          <m-formInput__checkbox formControlName="stripeAgree">
+            I have read and agree to the
+            <a href="https://stripe.com/legal" target="_blank">
+              Stripe Services Agreement </a
+            >.
+          </m-formInput__checkbox>
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------ -->
+
+      <!-- FORM BUTTONS -------------- -->
+      <div class="m-walletForm__buttonsContainer">
+        <!-- TODOOJM  confirmation popup on cancel -->
+        <m-shadowboxSubmitButton
+          (click)="toggleEditMode(false)"
+          [disabled]="inProgress"
+          color="grey"
+          >Cancel</m-shadowboxSubmitButton
+        >
+        <m-shadowboxSubmitButton
+          (click)="createAccount()"
+          [disabled]="inProgress"
+          >Update Personal Information</m-shadowboxSubmitButton
+        >
+      </div>
+    </form>
+  </div>
+</div>
